<resources>
    <string name="app_name">МКБ 10 pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_mesage">Error</string>
    <string name="catalog_menu_title">Справочник</string>
    <string name="account_menu_title">Аккаунт</string>
    <string name="exit_menu_title">Выход</string>
    <string name="login_title">Вход в справочник</string>
    <string name="login_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="enter_data_title">Введите ваши данные</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="save_button_title">Сохранить</string>
</resources>
