<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_data_title"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTV">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/surnameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/nameTIL">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/surnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname_hint"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/save_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>